--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=crud-fullstack
-spring.datasource.url = jdbc:mysql://localhost:3306/customer_management
+spring.datasource.url = jdbc:mysql://localhost:3306/hr_app
 spring.datasource.username = root
 spring.datasource.password = 2002
 
